# LocoPilot

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  server.py  setup.ps1  setup.sh
.github/: DISCUSSION_SEEDS.md  GOOD_FIRST_ISSUES.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
examples/: README.md  coi_scanner.py  desktop_automation.py  form_filler.py  research_agent.py  screen_monitor.py
